fixed submenu collapse

--- a/assets/style/css/partials/header.css
+++ b/assets/style/css/partials/header.css
@@ -119,8 +119,7 @@ body .header {
     display: none;
     justify-items: center;
 
-    position: absolute;
-    top: 2rem;
+    position: relative;
     right: 0;
     left: 0;
 }
